In kpanel-0.17:
 
    Patchlevel 2:
       - context menu improved/fixed
    Patchlevel 1:
       - Alt-F1 global shortcut for the system menu


==================kpanel-0.17 has been almost a rewrite============

Major visible changes:
    - no more graphical configuration (this is done by kcc)
       (not true, but will be removed soon)
    - works with the modern kwm II now (kwm >= 0.10)
    - uses Christoph Neerfeld's pmenu class from ktaskbar
      => item order can be modified via Chris' kmenuedit
    - works (only) with qt-1.3

Major unsibible changes: 
    - cleaner code :-)

====================================================================


since kpanel-0.16:

- visual feedback (waitCursor) when invoking applications via buttons.
- should ignore non-readable files and directories

NOTE: kpanel needs a kwm>=0.8pl15 now

- bugfixes
- no more special menufont
- handles general change requests from kdisplay now

- taskbar and windowlist sorted in virtual desktops
- virtual desktop definitions are yet in the global config file
   in a special "Desktops" group
- takes better care of kdisplay's settings

- tiny style improved (desktop buttons in one row)

- minor fixes

- small bug in minipanel's geometry fixed
- kwm like windowname detection
- fixed the taskbar look (didn't know it was broken... )
- kpanel:system (=kwm's Alt-F1) fixed

- PanelHidden refers only for a certain virtual desktop
- focusPolicy == NoFocus for all buttons
- minor fixes

- Desktop buttons editable (a really cool patch from Stephan Kulow :-)
- minor fixes to editable buttons (minipanel's desktopmenu, desktop
  changes via keyboard, FocusPolicy, ...)

since kpanel-0.15:

- standalone K-Button is also moveable now (with MMB)
- show/hide-state is saved
- Right positioning no longer valid
- Minipanel integrated (Sven and Matthias)
- RMB menu on taskbar (Sven and Matthias)
- Tooltip placement improved
- tells kwm about the number of desktops